# jstruct

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/jstruct/: align_allocer.h  allocer.h  array_view.h  builder.h  inherit_chain.h  jbuilder.h  jerror.h  jloader.h  joption.h  jparser.h  json_def.h  jstruct.h
include/jstruct/allocer/: align_allocer.h  allocer_base.h  str_dedup_plugin.h
test/: CMakeLists.txt  data_def.h  test.cpp  test_load_error_field.cpp  test_load_ignore_error.cpp  test_load_ignore_missing.cpp  test_load_missing_field.cpp  test_load_normal.cpp
